New in spot 2.11.5.dev  (not yet released)

  Nothing yet.

  Bug fixes:

  - Running command lines such as "autfilt input.hoa -o output-%L.hoa"
    where thousands of different filenames can be created failed with
    "Too many open files".  (Issue #534)

  - Using --format=... on a tool that output formulas would force
    the output on standard output, even when --output was given.


New in spot 2.11.5  (2023-04-20)

  Bug fixes:

  - Fix spurious failure of ltlsynt2.test when Python is not installed
    (issue #530).

  - Building from the git repository would fail to report a missing
    emacs (issue #528).

  - Fix exception raised by aut1.intersecting_run(aut2).as_twa()
    because the run did not match transitions present in aut1
    verbatim.  We also changed the behavior of as_twa() to not merge
    identical states.

  - Fix segfaults occuring in determinization of 1-state terminal
    automata.

  - Fix incorrect assertion in game solver when the edge vector
    contains deleted transitions.

New in spot 2.11.4  (2023-02-10)

  Python:

  - spot.acd() no longer depends on jQuery for interactivity.

  Bug fixes:

  - When merging initial states from state-based automata with
    multiple initial states (because Spot supports only one), the HOA
    parser could break state-based acceptance.  (Issue #522.)

  - autfilt --highlight-word refused to work on automata with Fin
    acceptance for historical reasons, however the code has been
    perfectly able to handle this for a while.  (Issue #523.)

  - delay_branching_here(), a new optimization of Spot 2.11 had an
    incorrect handling of states without successors, causing some
    segfaults.  (Issue #524.)

  - Running delay_branching_here() on state-based automata (this was not
    done in Spot so far) may require the output to use transition-based
    acceptance.  (Issue #525.)

  - to_finite(), introduce in 2.11, had a bug that could break the